Fixed all  buttons

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <section class="=screen">0</section>
+      <section class="screen">0</section>
       <section class="calc-buttons">
-        <div class="calc-buttons-row">
+        <div class="calc-button-row">
           <button class="calc-button double">c</button>
           <button class="cal-button">&larr;</button>
           <button class="calc-button">&divide;</button>
